# AiPlus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  FINAL_OUTPUT_CONTRACT.md  IMPLEMENTATION_MANIFEST.md  LICENSE  META_ORCHESTRATION_FRICTION_LOG.md  MODULES.md  PROFILE_BUNDLE_PLAN.md  PROPOSAL_VELOCITY_GLOBAL_LEDGER.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  RELEASE_READINESS_PACKET_v0.5.1.md  RELEASE_READINESS_PACKET_v2.md  REVIEW_PACKAGE_v2.md  SECURITY.md  UPGRADE.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: agent-team-persona-behavior.yml  aieconlab-bundle-sync.yml  ci.yml  post-release-smoke.yml  release.yml
.opencode/: opencode.json
.opencode/instructions/: aiplus.md
assets/: README.md
assets/aieconlab/: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  README.zh-CN.md  SECURITY.md  ael  aiplus-module.json  install.sh
assets/aiplus-agent-key/: .gitignore  DESIGN.md  README.md  README.zh-CN.md  aiplus-module.json
assets/aiplus-agent-memory/: CHANGELOG.md  MODULES.md  README.md  README.zh-CN.md  aiplus-module.json
assets/aiplus-agent-team/: aiplus-module.json
assets/aiplus-agent-velocity/: DESIGN.md  README.md  README.zh-CN.md  aiplus-module.json
assets/aiplus-auto-team-consultant/: .gitignore  CHANGELOG.md  LICENSE  MODULES.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SECURITY.md  aiplus-module.json
assets/aiplus-compact-reminder/: CHANGELOG.md  MODULES.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SECURITY.md  aiplus-module.json  package.json
assets/aiplus-token-cost/: CHANGELOG.md  MODULES.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SECURITY.md  aiplus-module.json
assets/pricing/: public-model-pricing.json
blog/: why-i-built-aiplus.md
crates/aiplus-cli/: Cargo.toml  build.rs
crates/aiplus-cli/.aiplus/agent-team/: .owner-setup-authorized
crates/aiplus-cli/src/: main.rs  mcp_server.rs
crates/aiplus-cli/src/agent/: audit.rs  cache.rs  commands.rs  coordinator.rs  core.rs  disable.rs  dismiss.rs  dispatch_history.rs  doctor.rs  enable.rs  handlers.rs  integrate.rs  invite.rs  list.rs  mod.rs  prune_worktrees.rs  reset.rs  route.rs  set_team.rs  state.rs  status.rs  talk.rs  transcript.rs  worktree.rs  worktree_pool.rs
crates/aiplus-cli/src/agent/audit/: bin_aliases.rs  canary.rs  force_skip.rs  owner_feedback.rs  owner_feedback_retract.rs  re_sign_manifest.rs  replay.rs  run.rs  setup_gpg.rs  status.rs  verify_log.rs  weekly_spot_check.rs
crates/aiplus-cli/src/identity/: mod.rs  setup_signing.rs
crates/aiplus-cli/tests/: ael_bundle_a_reconcile.rs  ael_bundle_b.rs  agent_autoflow_discovery.rs  agent_autoflow_mcp.rs  agent_doctor_secret_auth.rs  agent_team_claude_code.rs  agent_team_opencode.rs  agent_team_persona_cases_structure.rs  aieconlab_claude_code.rs  aieconlab_opencode.rs  audit_fresh_project.rs  autosummon_intent_smoke.rs  changelog_format.rs  claude_code_auto_trigger.rs  cli_behavior_issues_32_33_34.rs  codex_parity_audit.rs  continuity.rs  coordinator_calibration.rs  coordinator_parallel_smoke.rs  cross_runtime_install_matrix.rs  cross_team_residue.rs  disk_warm_cache.rs  doctor_stale_registry_info.rs  g1_runtime_contract_harness.rs  g2_dispatch_gate_route.rs  install_sh_fallback.rs  opencode_tui_role_trigger.rs  parity.rs  perf1_dispatch_parallel.rs  perf1_worktree_pool_cache.rs  polish_1_smoke.rs  regression_15_tracked_delete_guard.rs  regression_author_critic_fixer.rs  score_only_smoke.rs  sec_1_auditor_smoke.rs  sec_1_setup_signing_smoke.rs  sec_1_tamper_evident_smoke.rs  setup_gpg.rs  status_no_placeholder.rs  uninstall_hygiene.rs  (+3 more)
crates/aiplus-cli/tests/fixtures/: README.md  coordinator_calibration.toml  g2_dispatch_gate_samples.jsonl
crates/aiplus-core/: Cargo.toml  build.rs
crates/aiplus-core/schemas/: aiplus-module.schema.json
crates/aiplus-core/src/: assets.rs  auto_write.rs  capsule.rs  compact_state.rs  consult.rs  error.rs  identity.rs  install_plan.rs  lib.rs  manifest.rs  memory.rs  memory_conflict.rs  memory_context.rs  module_manifest.rs  paths.rs  profile_sync.rs  redaction.rs  rollback.rs  session.rs  skill_candidate.rs  snapshot.rs  velocity.rs
crates/aiplus-core/src/agent_team/: types.rs
crates/aiplus-core/src/auditor/: drift.rs  evidence_collector.rs  fixture_runner.rs  flock_guard.rs  gate.rs  mod.rs
crates/aiplus-token-cost/: Cargo.toml  README.md
crates/aiplus-token-cost/src/: embedded.rs  lib.rs  pricing.rs  rollup.rs  snapshot.rs
crates/aiplus-token-cost/tests/: token_cost_smoke.rs
docs/: FINAL_VERDICT_PACKET_v2.1.md  agent-memory-v2.1-plan.md  agent-operator-manual.md  architecture.md  auto-compact-ceo-final-packet.md  auto-compact-v2.1-accept-pending-review.md  auto-compact-v2.1-final-packet.md  auto-compact-v2.1-plan.md  binary-artifact-matrix.md  compact-guide.md  compact-reminder-quality-rubric.md  daily-workflows.md  demo.tape  distribution-plan.md  dogfood-report.md  faq.md  getting-started.md  glossary.md  hermes-like-memory-gap-analysis.md  host-compact-vs-aiplus-compact.md  identity-guide.md  installer-plan.md  memory-guide.md  memory-quality-rubric.md  migration-from-auto-compact.md  migration-from-node-cli.md  module-contract-plan.md  node-parity.md  profile-bundle-guide.md  public-repo-plan.md  qa-release-readiness.md  release-automation.md  release-packet-template.md  safety.md  task-cards-module-system-foundation.md  test-coverage-map.md  troubleshooting.md  user-interview-scripts.md
docs/announcements/: v0.6.0.md
docs/operations/: token-cost-subtree-sync.md
docs/proposals/: G1-role-nl-triggers.md  G2-dispatch-gate-semantic.md  agent-autoflow-discovery-2-impl-notes.md  agent-autoflow-discovery-impl-notes.md  agent-autoflow-mcp-impl-notes.md  (+16 more)
marketing/: internship-cover-snippet.md  linkedin-post.md  show-hn.md
scripts/: artifact-check.sh  install-hooks.sh  release-doctor.sh  sandbox-aiplus.sh  secret-boundary-scan.sh  subproduct-drift.sh
tests/: README.md
(+274 files in other folders)
