[workspace]
members = ["crates/aiplus-cli", "crates/aiplus-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
signal-hook = "0.3"
tempfile = "3"
toml = "0.8"
fs2 = "0.4"
sha2 = "0.10"
hex = "0.4"
shell-words = "1.1"
# keyring: cross-platform OS keyring (macOS Keychain / Linux Secret Service /
# Windows Credential Manager) for secret-broker token storage. Phase 2 of the
# multi-platform rollout (Phase 1 added Linux + Intel Mac binary distribution
# but left the keychain code as a macOS-only `Command::new("security")` shell-
# out; Phase 2 replaces that with a native cross-platform API).
keyring = { version = "3", features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
