[workspace]
members = ["crates/aiplus-cli", "crates/aiplus-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
serde_yaml_ng = "0.10"
signal-hook = "0.3"
tempfile = "3"
toml = "0.8"
fs2 = "0.4"
sha2 = "0.10"
hex = "0.4"
shell-words = "1.1"
rexpect = "0.7.1"
# keyring: cross-platform OS keyring (macOS Keychain / Linux Secret Service /
# Windows Credential Manager) for secret-broker token storage. Phase 2 of the
# multi-platform rollout (Phase 1 added Linux + Intel Mac binary distribution
# but left the keychain code as a macOS-only `Command::new("security")` shell-
# out; Phase 2 replaces that with a native cross-platform API).
# `vendored` builds libdbus from source and statically links it, so the
# Linux binary doesn't dynamically link `libdbus-1.so.3` at runtime. Without
# this, headless Linux systems / minimal containers fail to even run
# `aiplus --version` because the dynamic linker can't resolve libdbus.
# `apple-native`/`windows-native` are no-ops for `vendored` (it only
# affects the dbus-secret-service path on Linux).
keyring = { version = "3", features = ["apple-native", "linux-native-sync-persistent", "windows-native", "vendored"] }

# P1.8: release profile tuned for smaller binaries on the user's
# download path. Defaults (codegen-units=16, lto=false, strip=false)
# produce a 9.6–10.2 MB binary after the v0.5.11 vendored-libdbus
# bump. The settings below:
#   strip = "symbols"   strip debug symbols + symbol table from the
#                       binary (≈1.5–2 MB on Linux release builds).
#   lto = "thin"        thin link-time optimization. Slower link
#                       (~1.5×) but ≈10–15% smaller binaries because
#                       the linker can drop dead code across crate
#                       boundaries that codegen-units leaves behind.
#   codegen-units = 1   maximize cross-crate inlining at the cost of
#                       compile time. Pairs with thin LTO to give the
#                       optimizer the widest possible view.
# opt-level stays at the cargo default "3" — going to "z" (size
# optimization) shrinks more but disables inlining heuristics that
# matter for the audit/run hot loop. Acceptable tradeoff.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
# panic=abort drops the unwinding tables (~200–500 KB). aiplus is a
# CLI binary — if a panic happens we want to exit anyway, not unwind
# and run destructors that print nothing useful. Pairs with the
# AIPLUS_UNEXPECTED_ERROR catch-all in main.rs for any error path that
# can be mapped through anyhow.
panic = "abort"
