[package]
name = "aiplus-cli"
version = "0.4.1"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "aiplus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
