[package]
name = "aiplus-cli"
version = "0.5.11"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "aiplus"
path = "src/main.rs"

[dependencies]
aiplus-core = { path = "../aiplus-core" }
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
hex.workspace = true
keyring.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
shell-words.workspace = true
signal-hook.workspace = true
tempfile.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
