[package]
name = "aiplus-core"
version = "0.5.1"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile.workspace = true
