[package]
name = "aiplus-token-cost"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
